--- a/package.json
+++ b/package.json
@@ -9,13 +9,21 @@
     "build": "vite build"
   },
   "dependencies": {
+    "@faker-js/faker": "^9.3.0",
+    "@nivo/bump": "^0.88.0",
+    "@nivo/pie": "^0.88.0",
+    "axios": "^1.7.9",
     "bcrypt": "^5.1.0",
     "body-parser": "^1.20.2",
-    "dotenv": "^16.3.1",
+    "chart.js": "^4.4.7",
+    "dotenv": "^16.4.7",
     "express": "^4.18.2",
-    "jsonwebtoken": "^9.0.1",
+    "jsonwebtoken": "^9.0.2",
     "pg": "^8.11.2",
     "react": "^18.2.0",
+    "react-avatar": "^5.0.3",
+    "react-chart": "^0.0.1",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.4.0",
     "react-router-dom": "^7.1.1",
