--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "body-parser": "^1.20.2",
     "chart.js": "^4.4.7",
     "dotenv": "^16.4.7",
+    "enforce-unique": "^1.3.0",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
+    "jwt-decode": "^4.0.0",
     "pg": "^8.11.2",
     "react": "^18.2.0",
     "react-avatar": "^5.0.3",
@@ -27,6 +29,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^5.4.0",
     "react-router-dom": "^7.1.1",
+    "rss-parser": "^3.13.0",
     "vite-express": "*",
     "volleyball": "^1.5.1"
   },
